starting with args on commandline

--- a/LineSegmenterTest/LineSegmenterTest.vcxproj.filters
+++ b/LineSegmenterTest/LineSegmenterTest.vcxproj.filters
@@ -27,12 +27,24 @@
     <ClInclude Include="utils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="cmdlineOptions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ArrowDetection.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="LineSegmenterTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="cmdlineOptions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ArrowDetection.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
