--- a/LineSegmenterTest/LineSegmenterTest.vcxproj
+++ b/LineSegmenterTest/LineSegmenterTest.vcxproj
@@ -141,12 +141,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ArrowDetection.h" />
+    <ClInclude Include="cmdlineOptions.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="utils.h" />
     <ClInclude Include="WriteOutData.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ArrowDetection.cpp" />
+    <ClCompile Include="cmdlineOptions.cpp" />
     <ClCompile Include="LineSegmenterTest.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
