--- a/LineSegmenterTest/LineSegmenterTest.vcxproj
+++ b/LineSegmenterTest/LineSegmenterTest.vcxproj
@@ -142,6 +142,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ArrowDetection.h" />
+    <ClInclude Include="CChainFuncs.h" />
     <ClInclude Include="cmdlineOptions.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
