--- a/LineSegmenterTest/LineSegmenterTest.vcxproj.filters
+++ b/LineSegmenterTest/LineSegmenterTest.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="WriteHtml.h">
       <Filter>Header Files\WriteOut</Filter>
     </ClInclude>
+    <ClInclude Include="CChainFuncs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
