--- a/LineSegmenterTest/LineSegmenterTest.vcxproj
+++ b/LineSegmenterTest/LineSegmenterTest.vcxproj
@@ -100,6 +100,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>D:\DEV\GitHub\EllipseUtils\EllipseUtils;D:\DEV\LIBS\Eigen_3.3\</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -144,6 +145,7 @@
     <ClInclude Include="ArrowDetection.h" />
     <ClInclude Include="CChainFuncs.h" />
     <ClInclude Include="cmdlineOptions.h" />
+    <ClInclude Include="inc_EllipseUtils.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="utils.h" />
