--- a/LineSegmenterTest/LineSegmenterTest.vcxproj.filters
+++ b/LineSegmenterTest/LineSegmenterTest.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="CChainFuncs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="inc_EllipseUtils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
